# DD2419

./: .gitignore  .gitmodules  README.md
arm/: package.xml  setup.py
arm/arm/: arm_conf.py  arm_detect.py  arm_listen_control.py  arm_test_detect.py
brain/: package.xml  setup.py
brain/brain/: bahaviors.py  behaviors.py  tree.py  tree69.py  tree7.py  tutorial1.py
bringup/: package.xml  setup.py
bringup/config/: rviz.rviz  usb_cam_info.yaml  usb_cam_param.yaml
bringup/launch/: action_server_launch.py  aruco_launch.py  brain_launch.py  hardware_launch.py  realsense_launch.py  sensing_launch.py
chassis_controller/: package.xml  setup.py
chassis_controller/chassis_controller/: I_want_to_test_the_deep_learning_object_detection_and_the_workspace.py  arm_conf.py  arm_detect.py  arm_detect_move.py  arm_detect_object_pick_up.py  arm_listen_control.py  aruco_detect_move.py  camera_detection.py  joy_controller.py  nav_goal_move.py  nav_goal_move_action.py  obj_detect_move.py
controller/: package.xml  setup.py
controller/controller/: approach_action_server.py  arm_controller.py  cartesian_controller.py  dummy_explorer_action_server.py  finetune_object_action_server.py  navigator.py  pursuit_action_server.py  pursuit_action_server_OLD.py
detection/: CMakeLists.txt  package.xml
detection/src/: detection.cpp
detection_ml/: CMakeLists.txt  package.xml  setup.py
detection_ml/detection_interfaces/: CMakeLists.txt  package.xml
detection_ml/detection_interfaces/msg/: Box.msg  BoxList.msg  DetectedObj.msg  Object.msg  Stuff.msg  StuffList.msg
detection_ml/detection_interfaces/srv/: GetBox.srv  GetStuff.srv
detection_ml/detection_ml/: detection_ml.py  package.xml  setup.cfg  setup.py
detection_ml/detection_ml/detection_ml/: category_eval.py  detection_ml.py
detection_ml/src/: detection_ml.cpp
display_markers/: package.xml
display_markers/display_markers/: display_markers.py
exploration/: package.xml  setup.py
exploration/exploration/: spinny.py  vroom.py  vrrom.py
mapping/: .clang-format  CMakeLists.txt  package.xml
mapping/include/mapping/: GridMap.hpp  Mapper.hpp
mapping/mapping/: CMakeLists.txt  package.xml
mapping/mapping/include/mapping/: GridMap.hpp  Mapper.hpp
mapping/mapping/src/: GridMap.cpp  Mapper.cpp  mapping.cpp
mapping/mapping_interfaces/: CMakeLists.txt  package.xml
mapping/mapping_interfaces/srv/: GetFrontier.srv  PathPlan.srv  PathPlanBox.srv  PathPlanObject.srv
mapping/src/: GridMap.cpp  Mapper.cpp  mapping.cpp
mapping/srv/: PathPlan.srv
odometry/: CMakeLists.txt  package.xml
odometry/Fusion/: CMakeLists.txt
odometry/include/odometry/: ekf.hpp  keyframe.hpp
odometry/odometry/: odometry.py
odometry/src/: ekf.cpp  filter_odom.cpp  lidar_compensator.cpp  lidar_landmarker.cpp  vi_odom.cpp  wheel_odom.cpp
robp_robot/robp_arm/Hiwonder_xArm_ROS2/: platformio.ini
robp_robot/robp_arm/Hiwonder_xArm_ROS2/src/: main.cpp
robp_robot/robp_interfaces/: CMakeLists.txt  package.xml
robp_robot/robp_interfaces/action/: Approach.action  Arm.action  Finetune.action  NavGoal.action  Pursuit.action
robp_robot/robp_interfaces/msg/: PickAndPlace.msg
robp_robot/robp_interfaces/srv/: IsInWorkspace.srv  Talk.srv
robp_robot/robp_launch/launch/: aruco_launch.py
robp_robot/robp_phidgets/robp_phidgets_spatial/src/: spatial.cpp
rplidar_ros2/: CMakeLists.txt
talking/: package.xml  setup.py
talking/talking/: talking.py
tree/: CMakeLists.txt  package.xml
tree/src/: tree.cpp
workspace/: package.xml  setup.py
workspace/workspace/: workspace.py
